[project]
name = "fullstack-multimodal-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "MihirPrajapati04", email = "prajapatimihir685@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
fullstack-multimodal-rag = "fullstack_multimodal_rag:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
